--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenu</title>
+
+    <link rel="stylesheet" href="css/css_index.css">
+
+    <title>Bienvenue</title>
 </head>
 <body>
 
-    
+    <div id="terminal">
+        <div id="top_bar"></div>
+        test
+    </div>
 
     
 </body>
