--- a/index.html
+++ b/index.html
@@ -12,10 +12,34 @@
 <body>
 
     <div id="terminal">
-        <div id="top_bar"></div>
-        test
+        <div id="terminal_top_bar">cmd</div>
+        <div id="terminal_body">
+        <pre id="ascii">
+            
+________________________________________________________________/\\\\\________________/\\\\\\________________________        
+______________________________________________________________/\\\///________________\////\\\________________________       
+ ___/\\\\\\\\\__________________________________/\\\__________/\\\_______________________\/\\\_____/\\\_______________      
+  __/\\\/////\\\_____/\\\\\_____/\\/\\\\\\\___/\\\\\\\\\\\__/\\\\\\\\\_______/\\\\\_______\/\\\____\///______/\\\\\____     
+   _\/\\\\\\\\\\____/\\\///\\\__\/\\\/////\\\_\////\\\////__\////\\\//______/\\\///\\\_____\/\\\_____/\\\___/\\\///\\\__    
+    _\/\\\//////____/\\\__\//\\\_\/\\\___\///_____\/\\\_________\/\\\_______/\\\__\//\\\____\/\\\____\/\\\__/\\\__\//\\\_   
+     _\/\\\_________\//\\\__/\\\__\/\\\____________\/\\\_/\\_____\/\\\______\//\\\__/\\\_____\/\\\____\/\\\_\//\\\__/\\\__  
+      _\/\\\__________\///\\\\\/___\/\\\____________\//\\\\\______\/\\\_______\///\\\\\/____/\\\\\\\\\_\/\\\__\///\\\\\/___ 
+       _\///_____________\/////_____\///______________\/////_______\///__________\/////_____\/////////__\///_____\/////_____
+
+        </pre>
+        <p>visiteur@tristan-tourbier.com:~$</p>
+        </div>
     </div>
 
     
 </body>
 </html>
+
+<script>
+
+    var div = document.getElementById("ascii");
+    var text = div.innerHTML;
+    var newText = text.replace(/_/g, "<span style='color: green;'>-</span>");
+    div.innerHTML = newText;
+
+</script>
