--- a/test.html
+++ b/test.html
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Terminal</title>
-</head>
-<body>
-  <div class="terminal">
-    <a href="#" class="close">X</a>
-    <p class="prompt">user@localhost:~$</p>
-    <p>Bienvenue dans le terminal.</p>
-    <p>Tapez vos commandes ici.</p>
+<div id="container">
+    <div id="line-1">Ligne 1</div>
   </div>
-</body>
-</html>
+  
+  <script>
+    const container = document.getElementById("container");
+    let lineNumber = 1;
+    
+    document.addEventListener("keydown", function(event) {
+      if (event.key === "Enter") {
+        lineNumber++;
+        const newLine = document.createElement("div");
+        newLine.id = "line-${lineNumber}";
+        newLine.innerText = `Ligne ${lineNumber}`;
+        container.appendChild(newLine);
+      }
+    });
+  </script>
+  
