--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@ ______________________________________________________________/\\\///___________
        _\///_____________\/////_____\///______________\/////_______\///__________\/////_____\/////////__\///_____\/////_____ -----
 
             </pre>
+            <p id="mess_info" style="color: yellow">--Pour commencer ecriver "help" pour avoir une liste des commandes disponibles--</p>
             <div id="communication">
-                <p id="ligne_1" class="input"></p>
+                <p id="ligne_1" class="input"><span id="select">|</span></p>
             </div>
         </div>
     </div>
