--- a/test.html
+++ b/test.html
@@ -1,18 +1,32 @@
-<div id="container" style="overflow:auto; height:100px;">
-    <p>Contenu de la div</p>
-    <p>Contenu de la div</p>
-    <p>Contenu de la div</p>
-    <p>Contenu de la div</p>
-  </div>
-  
-  <button id="scroll-btn">Faire défiler</button>
-  
-  <script>
-    const container = document.getElementById("container");
-    const scrollBtn = document.getElementById("scroll-btn");
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="css/style.css">
+
+    <title>Bienvenue</title>
+</head>
+
+<body>
+
+    <p>ddddd<span id="char">|</span></p>
     
-    scrollBtn.addEventListener("click", function() {
-      container.scrollTop = container.scrollHeight;
-    });
-  </script>
-  
+
+</body>
+
+<script>
+
+    const char = document.getElementById("char");
+
+    setInterval(function() {
+      if (char.style.visibility === "hidden") {
+        char.style.visibility = "visible";
+      } else {
+        char.style.visibility = "hidden";
+      }
+    }, 500);
+
+</script>
