--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ ______________________________________________________________/\\\///___________
             </pre>
             <p id="mess_info" style="color: yellow">--Pour commencer ecriver "help" pour avoir une liste des commandes disponibles--</p>
             <div id="communication">
-                <p id="ligne_1" class="input"><span id="select">|</span></p>
+                <p id="ligne_1" class="input curseur"></p>
             </div>
         </div>
     </div>
