--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="css/css_index.css">
 
-    <title>Bienvenue</title>
+    <title id="title">/ Tristan TOURBIER \</title>
 </head>
 <body>
 
@@ -27,7 +27,7 @@ ______________________________________________________________/\\\///___________
        _\///_____________\/////_____\///______________\/////_______\///__________\/////_____\/////////__\///_____\/////_____ -----
 
             </pre>
-            <p id="mess_info" style="color: yellow">--Pour commencer ecriver "help" pour avoir une liste des commandes disponibles--</p>
+            <p id="mess_info" style="color: yellow">-- Pour commencer, écrivez "help" pour avoir la liste des commandes disponibles --</p>
             <div id="communication">
                 <p id="ligne_1" class="input curseur"></p>
             </div>
