--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Tristan TOURBIER|email:tristan.tourbier@supinfo.com" />
 
     <link rel="stylesheet" href="css/css_index.css">
 
