--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Tristan TOURBIER|email:tristan.tourbier@supinfo.com" />
 
+    <link rel="apple-touch-icon" sizes="180x180" href="ressources/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="ressources/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="ressources/favicon/favicon-16x16.png">
+    <link rel="manifest" href="ressources/favicon/site.webmanifest">
+
     <link rel="stylesheet" href="css/css_index.css">
 
     <title id="title">/ Tristan TOURBIER \</title>
