--- a/index.html
+++ b/index.html
@@ -1,120 +1,47 @@
 <!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Tower Defense</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-  </head>
-  <body>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Tristan TOURBIER|email:tristan.tourbier@supinfo.com" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="ressources/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="ressources/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="ressources/favicon/favicon-16x16.png">
+    <link rel="manifest" href="ressources/favicon/site.webmanifest">
+
+    <link rel="stylesheet" href="css/css_index.css">
+
+    <title id="title">/ Tristan TOURBIER \</title>
+</head>
+<body>
+
+    <div id="terminal">
+        <div id="terminal_top_bar">cmd</div>
+        <div id="terminal_body">
+            <pre id="ascii">
+            
+________________________________________________________________/\\\\\________________/\\\\\\________________________        
+______________________________________________________________/\\\///________________\////\\\________________________       
+ ___/\\\\\\\\\__________________________________/\\\__________/\\\_______________________\/\\\_____/\\\_______________      
+  __/\\\/////\\\_____/\\\\\_____/\\/\\\\\\\___/\\\\\\\\\\\__/\\\\\\\\\_______/\\\\\_______\/\\\____\///______/\\\\\____     
+   _\/\\\\\\\\\\____/\\\///\\\__\/\\\/////\\\_\////\\\////__\////\\\//______/\\\///\\\_____\/\\\_____/\\\___/\\\///\\\__    
+    _\/\\\//////____/\\\__\//\\\_\/\\\___\///_____\/\\\_________\/\\\_______/\\\__\//\\\____\/\\\____\/\\\__/\\\__\//\\\_   
+     _\/\\\_________\//\\\__/\\\__\/\\\____________\/\\\_/\\_____\/\\\______\//\\\__/\\\_____\/\\\____\/\\\_\//\\\__/\\\__   -----
+      _\/\\\__________\///\\\\\/___\/\\\____________\//\\\\\______\/\\\_______\///\\\\\/____/\\\\\\\\\_\/\\\__\///\\\\\/___ |V.1.0|
+       _\///_____________\/////_____\///______________\/////_______\///__________\/////_____\/////////__\///_____\/////_____ -----
+
+            </pre>
+            <p id="mess_info" style="color: yellow">-- Pour commencer, écrivez "help" pour avoir la liste des commandes disponibles --</p>
+            <div id="communication">
+                <p id="ligne_1" class="input curseur"></p>
+            </div>
         </div>
-      </div>
-      <div id="unity-warning"> </div>
-      <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Tower Defense</div>
-      </div>
     </div>
-    <script>
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var warningBanner = document.querySelector("#unity-warning");
 
-      // Shows a temporary message banner/ribbon for a few seconds, or
-      // a permanent error message on top of the canvas if type=='error'.
-      // If type=='warning', a yellow highlight color is used.
-      // Modify or remove this function to customize the visually presented
-      // way that non-critical warnings and error messages are presented to the
-      // user.
-      function unityShowBanner(msg, type) {
-        function updateBannerVisibility() {
-          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
-        }
-        var div = document.createElement('div');
-        div.innerHTML = msg;
-        warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
-        else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
-            warningBanner.removeChild(div);
-            updateBannerVisibility();
-          }, 5000);
-        }
-        updateBannerVisibility();
-      }
-
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/web_3.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/web_3.data.gz",
-        frameworkUrl: buildUrl + "/web_3.framework.js.gz",
-        codeUrl: buildUrl + "/web_3.wasm.gz",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "TRST",
-        productName: "Tower Defense",
-        productVersion: "0.1",
-        showBanner: unityShowBanner,
-      };
-
-      // By default Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-        container.className = "unity-mobile";
-        canvas.className = "unity-mobile";
-
-        // To lower canvas resolution on mobile devices to gain some
-        // performance, uncomment the following line:
-        // config.devicePixelRatio = 1;
-
-        unityShowBanner('WebGL builds are not supported on mobile devices.');
-      } else {
-        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
-      }
-
-      canvas.style.background = "url('" + buildUrl + "/web_3.jpg.gz') center / cover";
-      loadingBar.style.display = "block";
-
-      var script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-        }).then((unityInstance) => {
-          loadingBar.style.display = "none";
-          fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
-          };
-        }).catch((message) => {
-          alert(message);
-        });
-      };
-      document.body.appendChild(script);
-    </script>
-  </body>
+    
+</body>
 </html>
+
+<script src="js/cmd.js"></script>
