--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
     <title id="title">/ Tristan TOURBIER \</title>
 </head>
 <body>
-    <form id="focus">
-        <input type="text" autofocus>
-        <input type="submit" value="Envoyer">
-    </form>
+
+    <input type="text" id="focus">
 
     <div id="terminal">
         <div id="terminal_top_bar">cmd</div>
