--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 </head>
 <body>
 
-    <input type="text" id="focus">
+    <!--
+        <input type="text" id="myInput" style="width: 0; height: 0; padding: 0; border: none;" autofocus>
+    -->
+
+    <input type="text" autofocus>
 
     <div id="terminal">
         <div id="terminal_top_bar">cmd</div>
