--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <input type="text" id="myInput" style="width: 0; height: 0; padding: 0; border: none;" autofocus>
     -->
 
-    <input type="text" autofocus>
+    <input type="text" id="focus">
 
     <div id="terminal">
         <div id="terminal_top_bar">cmd</div>
